--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
+    <link href="./resources/css/index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p><a href="./#">Download Excursion (coming soon)</a></p>
   </body>
 </html>
