--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="./#">Download Excursion (coming soon)</a></p>
+    <p>
+      <video autoplay>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excusion remembers places you like, and recommends new point
+      of interest around you.
+    </p>
+    <p>
+      <img src="resources/images/camp.jpg">
+    </p>
+    <p>
+      <img src="resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="./#">Download Excursion (coming soon)</a></p>
+    <p id=footer>© Excursion</p>
   </body>
 </html>
